# MRPP

./: .gitignore  CMakeLists.cmake  README.md  formation.launch.xml  multi_robot.xml  rvizformation.rviz.yaml  srcmulti_robot_simulationformation_controller.py  srcmulti_robot_simulationmotion_planner.py  srcmulti_robot_simulationmulti_robot_sim.py
launch/: config.yaml  config_sim.yaml  run.launch
multi_robot_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
multi_robot_simulation/config/: formations.yaml  robots.yaml  waypoints.yaml
multi_robot_simulation/launch/: spawn_robot.launch
multi_robot_simulation/scripts/: test_formation.py
multi_robot_simulation/src/multi_robot_sim/: multi_robot_sim.py  waypoint_manager.py
multi_robot_simulation/urdf/: diff_drive_robot.xacro
